# energimataren

./: README.md  pyproject.toml  se.danielnylander.energimataren.desktop
.tx/: config
po/: energimataren.pot  sv.mo  sv.po
src/energimataren/: main.py
